--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "examples",
   "version": "0.0.0",
   "scripts": {
-    "dev": "node_modules/.bin/vite",
-    "build": "node_modules/.bin/tsc && vite build",
-    "preview": "node_modules/.bin/vite preview",
-    "start:examples": "node_modules/.bin/vite"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@realsee/dnalogel": "1.0.0",
+    "@realsee/dnalogel": "0.0.0",
     "@realsee/five": "^5.0.0-alpha.95",
     "@types/offscreencanvas": "^2019.6.4",
     "@types/react": "^17.0.33",
