--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "classnames": "^2.3.1",
     "three": "0.117.1",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
