--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.2",
     "@realsee/dnalogel": "0.0.0",
     "@realsee/five": "^5.0.0-alpha.95",
     "@types/offscreencanvas": "^2019.6.4",
