--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "@types/offscreencanvas": "^2019.6.4",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "@vitejs/plugin-react": "^1.0.7",
     "classnames": "^2.3.1",
+    "eslint": "^8.9.0",
+    "eslint-config-alloy": "^4.5.1",
+    "eslint-plugin-react": "^7.29.0",
     "three": "0.117.1",
-    "typescript": "^4.5.4",
+    "typescript": "^4.5.5",
     "vite": "^2.8.0"
   }
 }
