--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^5.4.2",
     "@realsee/dnalogel": "0.0.0",
     "@realsee/five": "^5.0.0-alpha.95",
-    "@realsee/open-works": "^0.0.1-alpha.5",
+    "@realsee/open-works": "^0.1.0-alpha.3",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.40",
     "@types/offscreencanvas": "^2019.6.4",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
@@ -28,6 +29,7 @@
     "eslint": "^8.9.0",
     "eslint-config-alloy": "^4.5.1",
     "eslint-plugin-react": "^7.29.0",
+    "svelte": "^3.46.4",
     "three": "0.117.1",
     "typescript": "^4.5.5",
     "vite": "^2.8.0"
