--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "vite --port 3001"
+    "start": "vite"
   },
   "dependencies": {
     "react": "^17.0.2",
