--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "vite --host 0.0.0.0"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -15,8 +15,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.2",
-    "@realsee/dnalogel": "2.0.0-alpha.10",
-    "@realsee/five": "^5.0.0-alpha.95",
+    "@realsee/dnalogel": "2.0.0-alpha.11",
+    "@realsee/five": "^5.0.0-alpha.120",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.41",
     "@types/offscreencanvas": "^2019.6.4",
     "@types/react": "^17.0.33",
