--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.2",
-    "@realsee/dnalogel": "2.0.0-alpha.15",
+    "@realsee/dnalogel": "2.0.0-alpha.16",
     "@realsee/five": "^5.0.0-alpha.120",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.41",
     "@types/offscreencanvas": "^2019.6.4",
@@ -28,6 +28,7 @@
     "eslint": "^8.9.0",
     "eslint-config-alloy": "^4.5.1",
     "eslint-plugin-react": "^7.29.0",
+    "hammerjs": "2.0.8",
     "svelte": "^3.46.4",
     "three": "0.117.1",
     "typescript": "^4.5.5",
