--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
-    "@realsee/five": "^5.0.0-alpha.198",
+    "@realsee/five": "5.0.0-alpha.198",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^4.0.0",
