--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
-    "@realsee/dnalogel": "latest",
+    "@realsee/dnalogel": "workspace:*",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "three": "0.117.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@realsee/five": "alpha",
+    "@realsee/five": "6.0.0-alpha.74",
     "@types/react": "^17.0.62",
     "@types/react-dom": "^17.0.20",
     "@vitejs/plugin-react": "^4.0.3",
