--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
     "@realsee/dnalogel": "workspace:*",
+    "@realsee/vapor": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "three": "0.117.1"
