--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
-    "@realsee/dnalogel": "workspace:*",
+    "@realsee/dnalogel": "^3.25.5",
+    "@realsee/dnalogel-utils": "^0.0.2",
     "@realsee/vapor": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
