--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "light-dev": "vite",
+    "start": "vite -m production",
+    "dev": "vite -m development",
+    "light-dev": "npm run dev",
     "build": "tsc && vite build",
     "format": "prettier --write ."
   },
@@ -15,7 +16,6 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
     "@realsee/dnalogel": "^3.25.5",
-    "@realsee/dnalogel-utils": "^0.0.2",
     "@realsee/vapor": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@realsee/five": "6.0.0-alpha.98",
+    "@realsee/five": "6.0.0-alpha.116",
     "@types/react": "^17.0.62",
     "@types/react-dom": "^17.0.20",
     "@vitejs/plugin-react": "^4.0.3",
