--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite -m production",
+    "start": "vite -m production --port 3000",
     "dev": "vite -m development",
     "light-dev": "npm run dev",
     "build": "tsc && vite build",
