--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "dev": "vite -m development",
     "light-dev": "npm run dev",
     "build": "tsc && vite build",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "clean": "rm -rf dist",
+    "test": "echo \"No tests configured\""
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
-    "@realsee/dnalogel": "^3.25.5",
+    "@realsee/dnalogel": "3.64.28",
     "@realsee/vapor": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -23,10 +26,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@realsee/five": "6.3.0-alpha.19",
+    "@realsee/five": "alpha",
     "@types/react": "^17.0.62",
     "@types/react-dom": "^17.0.20",
     "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.8.0",
     "glob": "^8.1.0",
     "prettier": "^3.2.5",
     "typescript": "5.5.4",
