--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
-    "@realsee/dnalogel": "3.67.8-alpha.1",
+    "@realsee/dnalogel": "file:../plugins",
     "@realsee/vapor": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
