--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
-    "@realsee/dnalogel": "file:../plugins",
+    "@realsee/dnalogel": "3.70.4",
     "@realsee/vapor": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@realsee/five": "6.5.0-alpha.15",
+    "@realsee/five": "6.5.2",
     "@types/react": "^17.0.62",
     "@types/react-dom": "^17.0.20",
     "@vitejs/plugin-react": "^4.0.3",
